layers filename capitalized

--- a/P000126.opf/layers/v001/Chapter.yml
+++ b/P000126.opf/layers/v001/Chapter.yml
@@ -1,5 +1,5 @@
 id: 8a724c88cbb94313a052349142e4b5d1
-annotation_type: chapter_title
+annotation_type: Chapter
 revision: '00001'
 annotations:
 - id: 4d67fde4d01f4357be4fda3e6f8076a1
