--- a/P000126.opf/layers/v001/Yigchung.yml
+++ b/P000126.opf/layers/v001/Yigchung.yml
@@ -1,5 +1,5 @@
 id: f4a3ac1f786541f9b4f021a5df4485d0
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: 65cea04d71254747aa90aba7b80004c3
