corrected annotation_type

--- a/P000126.opf/layers/v001/Quotation.yml
+++ b/P000126.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: ac054f7f021a4911b27f34b0a3228321
-annotation_type: Tsawa
+annotation_type: Quotation
 revision: '00001'
 annotations:
   6597e8a0c0c748c2acc5fc925928d35b:
